chore: update README

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>GitHub Unleashed: Hands-on and Best Practices</title>
+    <title>GitHub Flow, Actions & Tools: Hands-on Workshop</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/app.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +13,7 @@
     <img id="ebcont-logo" src="images/ebcont-base-white.png" />
 </div>
 
-<h1>GitHub Unleashed: <span class="fixme">Hands-off</span> and Best Practices</h1>
+<h1>GitHub Flow, Actions & Tools: <span class="fixme">Hands-off</span> Workshop</h1>
 
 <div id="mainsec">
     <p>Get your greeting <a href="/greeting">here</a></p>
